--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
         </div>
     </div>
-    <script src="js/javascript.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 
 </html>
